--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: go
 matrix:
   include:
-    - go: 1.8.x
-    - go: 1.9.x
+    - go: 1.10.x
+    - go: tip
+  allow_failures:
+    - go: tip
 dist: trusty
 sudo: false
 cache:
